fix radv speaker z-index

--- a/src/conferences/radv/sass/components/_speakers.sass
+++ b/src/conferences/radv/sass/components/_speakers.sass
@@ -207,7 +207,7 @@
     margin: 0 0 10px
 
   &__bottom
-    z-index: 10
+    z-index: 2
     position: absolute
     left: 20px
     top: 20px
